poc/tests/errors/test_FplVariableDuplicateInVariableList_other_signature.fpl
Test.Namespace
{
    inference
    {
        TestInferenceRule(x,y,x:pred)
        {
            premise:
                x
            conclusion:
                q
        }
    }

    theory {}
}

##############################

FplVariableDuplicateInVariableList:5:32: Variable x already listed at 5:28